[tool.poetry]
name = "tools as llm"
version = "0.0.1"
description = "Experimenting tools with llm where llm can call other llms to use to build thing using python repl"
authors = ["Mindfultime <mindful.time@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3,<3.13"
langchain = "^0.3.0"
langgraph = "^0.2.21"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
aider-chat = "^0.56.0"
azure-identity = "^1.17.1"
azure-keyvault = "^4.2.0"
pypdf = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
