[tool.poetry]
name = "Agent Experiment"
version = "0.0.1"
description = "Experimenting with agent with tools like aider, langchain, langgraph, etc"
authors = ["Mindfultime <mindful.time@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3,<3.13"
langchain = "^0.3.0"
langgraph = "^0.2.21"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
aider-chat = "^0.56.0"
azure-identity = "^1.17.1"
azure-keyvault = "^4.2.0"
pypdf = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
