[tool.poetry]
name = "Agent Experiment"
version = "0.0.1"
description = "Experimenting with agent with tools like aider, langchain, langgraph, etc"
authors = ["Mindfultime <mindful.time@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3,<3.13"
langchain = "^0.3.0"
langgraph = "^0.2.21"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
aider-chat = {git = "https://github.com/paul-gauthier/aider.git"}
azure-identity = "^1.17.1"
azure-keyvault = "^4.2.0"
pypdf = "^4.3.1"
streamlit = "^1.38.0"
pandas = "^2.2.2"
plotly = "^5.24.1"
folium = "^0.17.0"
streamlit-folium = "^0.22.0"
flask = "^3.0.3"
weasyprint = "^62.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
